<resources>
    <string name="app_name">TIC-TAC-TOE</string>
    <string name="play">PLAY</string>
    <string name="exit">EXIT</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="_00_00">00:00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="logo">logo</string>
    <string name="count_up_timer_clock">count up timer clock</string>
    <string name="rules">RULES</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="rulesexplained">\n
        TIC-TAC-TOE IS A TWO PLAYER GAME\n
        PLAYER 1 IS REPRESENTED WITH AN \'X\'\n
        PLAYER 2 IS REPRESENTED WITH AN \'O\'\n
        FIRST PLAYER TO GET 3-IN-A-ROW WINS \n\n

        3-IN-A-ROW CAN BE A:\n
        \t\t\t\tVERTICAL\n
        \t\t\t\tHORIZONTAL\n
        \t\t\t\tDIAGONAL\n
        HOWEVER, IF THE BOARD FILLS UP PRIOR\n
        TO EITHER PLAYER GETTING A 3-IN-A-ROW\n
        THE GAME IS CONSIDERED A TIE!\n
        MAY THE BEST PLAYER WIN! \n
    </string>
    <string name="player_1_txt">PLAYER 1</string>
    <string name="name_player1_hint">ENTER NAME</string>
    <string name="player_2_txt">PLAYER 2</string>
    <string name="name_player2_hint">ENTER NAME</string>
    <string name="x_image_str_resource">X image</string>
    <string name="y_image_str_resource">Y image</string>
    <string name="versusimage">versusImage</string>
    <string name="_0_for_p1">0</string>
    <string name="_0_for_p2">0</string>
    <string name="restart">RESTART</string>
    <string name="home">HOME</string>
    <string name="x">X</string>
    <string name="o">o</string>
</resources>