<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintVertical_bias="0.0">

        <GridView
            android:layout_width="324dp"
            android:layout_height="285dp"
            android:layout_above="@+id/numPad"
            android:layout_below="@id/sudokuTopPanel"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp" />

        <RelativeLayout
            android:id="@+id/sudokuTopPanel"
            android:layout_width="391dp"
            android:layout_height="67dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <Chronometer
                android:id="@+id/timeElapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/alarmClockForTimeElapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="26dp"
                android:layout_toStartOf="@+id/timeElapsed"
                custom:srcCompat="@android:drawable/ic_lock_idle_alarm" />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/numPad"
            android:layout_width="wrap_content"
            android:layout_height="157dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="48dp"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/oneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_1"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/twoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_2"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/threeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_3"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fourBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_4"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/fiveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_5"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/sixBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_6"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sevenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_7"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/eightBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_8"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/nineBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_button_color"
                    android:text="@string/_9"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>