<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSelectActivity">

    <TextView
        android:id="@+id/player1Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="5dp"
        android:text="@string/player_1_txt"
        android:fontFamily="@font/orbitron_black"
        android:textStyle="bold"
        android:textColor="#778899"
        app:layout_constraintBottom_toTopOf="@+id/player1InputPlainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/player1InputPlainText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player1InputPlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/name_player1_hint"
        android:fontFamily="@font/orbitron_regular"
        android:textColorHint="#778899"
        android:textColor="#778899"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/versusImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Txt" />

    <EditText
        android:id="@+id/player2InputPlainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="126dp"
        android:ems="10"
        android:hint="@string/name_player2_hint"
        android:fontFamily="@font/orbitron_regular"
        android:textColorHint="#778899"
        android:textColor="#778899"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2Txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/player2Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/player_2_txt"
        android:fontFamily="@font/orbitron_black"
        android:textStyle="bold"
        android:textColor="#778899"
        app:layout_constraintEnd_toEndOf="@+id/player2InputPlainText"
        app:layout_constraintTop_toBottomOf="@+id/versusImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playBtn_playerSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:onClick="onClickPlayBtn_playerSelect"
        android:background="@drawable/custom_buttons"
        android:text="@string/play"
        android:fontFamily="@font/orbitron_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2InputPlainText" />

    <ImageView
        android:id="@+id/versusImage"
        android:layout_width="140dp"
        android:layout_height="129dp"
        android:contentDescription="@string/versusimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        app:srcCompat="@drawable/versus" />

    <TextView
        android:id="@+id/letter_x_player_select_txtView"
        android:layout_width="83dp"
        android:layout_height="72dp"
        android:fontFamily="@font/val"
        android:text="@string/x"
        android:textColor="#95120A"
        android:textSize="70sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/player1InputPlainText"
        app:layout_constraintEnd_toEndOf="@+id/player2Txt"
        app:layout_constraintStart_toEndOf="@+id/player1InputPlainText"
        app:layout_constraintTop_toTopOf="@+id/player1Txt" />

    <TextView
        android:id="@+id/letter_o_player_select_txtView"
        android:layout_width="87dp"
        android:layout_height="72dp"
        android:fontFamily="@font/val"
        android:text="@string/o"
        android:textColor="#0047AB"
        android:textSize="70sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/player2InputPlainText"
        app:layout_constraintEnd_toStartOf="@+id/player2InputPlainText"
        app:layout_constraintStart_toStartOf="@+id/player1InputPlainText"
        app:layout_constraintTop_toTopOf="@+id/player2Txt" />

</androidx.constraintlayout.widget.ConstraintLayout>